# CCSuite

./: README.md  instructions.txt  pyproject.toml  requirements.txt
ccsuite/: ccsuite_client.py  ccsuite_server.py
ccsuite/ccchanel/: ccchanel_base.py  ccchanel_file.py  ccchanel_log.py  ccchanel_messages.py  dropbox_api.py  file.py  log.py
ccsuite/client/: client.py  client_base.py  exec.py  exec_base.py  exec_subprocess.py  id.py  id_base.py  id_hostname.py  payloads.py
ccsuite/server/: cmd.py  repl.py  repl_utils.py  server.py  server_base.py  server_utils.py  util.py
ccsuite/steno/: steno_base.py
src/: client.py  server.py
src/ccchanel/: dropbox.py  dropbox_api.py  file.py  log.py
src/ccchanel/resources/: log_entry.j2
src/client/: exec.py  id.py  payloads.py
src/decorators/: logging.py
src/server/: cmd.py  pong.py  repl.py  util.py
tests/: dropbox_login_base.py
tests/unit/ccchanel/: base_setup_ccchanelfile.py  base_setup_ccchanelfile_ccstenobase.py  base_setup_ccstenobase.py  ccchanel_file.py  test_ccchanel_file.py  test_dropbox_api.py  test_file.py  test_log.py  test_messages.py
tests/unit/client/: test_exec_subprocess.py  test_id_hostname.py
tests/unit/server/: test_cmd_utils.py  test_repl_utils.py  test_server_base.py  test_server_utils.py
tests/unit/steno/: steno_base.py
