[tool.poetry]
name = "ccsuite"
version = "0.0.2"
description = "desc"
authors = ["NegaScout <jenik.wagner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dropbox = "^11.36.2"
stegano = "^0.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ccclient = "ccsuite.ccsuite_client:main"
ccserver = "ccsuite.ccsuite_server:main"

[tool.coverage.run]
branch = true
omit = ["ccchanel/ccchanel/ccchanel_base.py",
        "ccchanel/client/exec_base.py",
        "ccchanel/client/id_base.py",
        "ccchanel/ccsuite_client.py",
        "ccchanel/ccsuite_server.py"]
[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
